@@ -2,24 +2,22 @@ package ShopTech.ShopTechEpicode.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.Ordered;
-import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CustomCorsFilter {
 
     @Bean
-    @Order(Ordered.HIGHEST_PRECEDENCE)
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowCredentials(true); // permette i cookie e i token
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // frontend
+        config.setAllowCredentials(true); // Consente l'invio dei token JWT
+        config.setAllowedOrigins(List.of("http://localhost:5173")); // Frontend
         config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
